# rust-fstguardrails

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fst_full_power_results.txt  monte_cristo_graph.json  rust_setup.md
.github/workflows/: ci.yml
examples/: cyber_detective.md  dict.tsv  dumas_output.txt  fst_full_power_results.txt  monte_cristo.md  monte_cristo_graph.json  tutorial.md
examples/cyber_data/: agents.csv  hashes.csv  sectors.csv
examples/data/: character.csv  intent.csv  location.csv  offensive_en.csv  product.csv  skus.csv  theme.csv
src/: bm25.rs  fast_retrieval.rs  lib.rs  main.rs  regex.rs  semantic_mesh.rs  spelling.rs
src/cli/: crawl.rs  hatcher_boost.rs  mcp.rs  mod.rs  search.rs  tag.rs  tag_server.rs
