[package]
name = "lume"
version = "0.1.0"
edition = "2021"
description = "Lume: A high-performance, zero-dependency, FST-backed tagger and on-demand BM25 hybrid search engine."

[dependencies]
tantivy-fst = "0.5"

[[bin]]
name = "tag"
path = "src/bin/tag.rs"

[[bin]]
name = "tag-server"
path = "src/bin/tag_server.rs"

[[bin]]
name = "search"
path = "src/bin/search.rs"

[profile.release]
lto = true
codegen-units = 1
